# tool-forge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/tool_forge/: __init__.py
src/tool_forge/cli/: __init__.py  main.py
src/tool_forge/templates/claude/agents/: tool-forge.md
src/tool_forge/templates/claude/commands/: create.md
src/tool_forge/templates/claude/skills/: tool-forge-skill.md
src/tool_forge/templates/claude/system_prompts/: tool-forge.md
src/tool_forge/templates/forge/scripts/: discover_solutions.py  init_tool_project.py  publication_checklist.py  quality_check.py
