[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-forge"
version = "3.0.0"
description = "Systematic tool creation with AI assistance"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["cli", "tools", "ai", "development", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "inquirer>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pycodestyle>=2.10.0",
]

[project.urls]
Homepage = "https://github.com/MuyaoWorkshop/tool-forge"
Documentation = "https://github.com/MuyaoWorkshop/tool-forge/blob/main/README.md"
Repository = "https://github.com/MuyaoWorkshop/tool-forge"
Issues = "https://github.com/MuyaoWorkshop/tool-forge/issues"

[project.scripts]
tool-forge = "tool_forge.cli.main:main"

[tool.setuptools]
packages = ["tool_forge"]

[tool.setuptools.package-data]
tool_forge = ["templates/**/*.md", "templates/**/*.py", "templates/**/*.json"]

[tool.setuptools.package-dir]
tool_forge = "src/tool_forge"
